--- a/src/index.css
+++ b/src/index.css
@@ -78,7 +78,9 @@ nav ul{
   justify-content: center;
 }
 
-nav ul li{
+
+
+.li1{
   display: inline-block;
   line-height: 80px;
   margin: 0 5px;
@@ -87,7 +89,8 @@ nav ul li{
   cursor: pointer;
   /* width:60px; */
 }
-nav ul li a{
+
+.li1 a{
   color: white;
   font-size: 17px;
   padding: 7px 13px;
@@ -95,9 +98,9 @@ nav ul li a{
   text-transform: uppercase;
 }
 
-a.active,a:hover{
+.li1 a.active,.li1 a:hover{
   background: #FFB900;
-  transition: .5s;
+  transition: .3s;
 }
 .checkbtn{
   font-size: 30px;
@@ -539,12 +542,14 @@ section h2{
   border: none;
   border-radius: 10px;
   margin-right: 40px;
+  text-align: center
 }
 .b_input button{
   border: none;
   border-radius: 10px;
   padding: 10px;
   background: #FFB900;
+  cursor: pointer;
 }
 
 @media (max-width:1460px) {
@@ -561,7 +566,7 @@ section h2{
   nav img{
       padding-left: 50px;
   }
-  nav ul li a{
+  .li1 a{
       font-size: 16px;
   }
   .jamoa{
@@ -605,16 +610,16 @@ section h2{
       transition: all .5s;
       backdrop-filter: blur(10px);
   }
-  nav ul li{
+  .li1{
       display: block;
       margin: 30px 0;
       line-height: 30px;
   }
-  nav ul li a{
+  .li1 a{
       font-size: 20px;
       color: #000;
   }
-  nav ul li a:hover,nav ul li a.active{
+  .li1 a:hover,.li1 a.active{
       background: none;
       color: #FFB900;
   }
@@ -702,6 +707,9 @@ section h2{
   .kurs{
       position: relative;
       font-size: 20px;
+  }
+  .malumot{
+    top: 260px;
   }
   /* .jamoa{
       width: 200px;
