--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  cursor: url("./img/5197917.png"),auto;
 }
 
 code {
@@ -65,6 +66,7 @@ nav{
   height: 80px;
   width: 100%;
   z-index: 10;
+  cursor: url("./img/cursor.png"),auto;
 }
 nav img{
   line-height: 80px;
@@ -513,6 +515,7 @@ section h2{
   height: 300px;
   border-radius:40px;
   margin-top: 90px;
+  cursor: url("./img/cursor.png"),auto;
 }
 .b_tittle h2{
   align-items: start;
